# easyquantrs

./: .gitignore  Cargo.toml  README.md
easyrmq_lib/: Cargo.toml
easyrmq_lib/src/: easyrmq.rs  lapinmq.rs  lib.rs  qaeventmq.rs
livedata/: Cargo.toml  app.yml  stock3_list.json
livedata/examples/: async_ex02.rs  fut_exam.rs  hello_world_consume.rs  hello_world_publish.rs  lapin_amq.rs  lapin_amq_oth.rs
livedata/src/: main.rs  main2.rs
savedata/: Cargo.toml
savedata/src/: main.rs
