[package]
name = "livedata"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
#qadata-rs = { path = "/home/zhangjx/backup/bk/quant/quantrs/qadata-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.13.0"
chrono = { version = "0.4", features = ["serde"] }
yaml-rust = "0.4"
pcre2 = "0.2"
amiquip = "0.4"