[package]
name = "livedata"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["thread-pool"] }
env_logger = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
#qadata-rs = { path = "/home/zhangjx/backup/bk/quant/quantrs/qadata-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.13.0"
chrono = { version = "0.4", features = ["serde"] }
yaml-rust = "0.4"
pcre2 = "0.2"
amiquip = "0.4"

async-amqp = { version = "1.2", optional = true }
deadpool = { version = "0.8.0", default-features = false, features = ["managed"] }
lapin = { version = "1.0", default-features = false }
serde_1 = { package = "serde", version = "1.0.103", features = ["derive"], optional = true }
#tokio-amqp = { version = "1.0", optional = true }
tokio-amqp = "1.0.0"
deadpool-lapin = "0.8.0"


[dev-dependencies]
config = { version = "0.11", default-features = false }
dotenv = "0.15"
#tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }
#tokio-amqp = "1.0"

